--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,4 +27,5 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
+          token: ${{ secrets.GH_PAT}}
       - run: npm run deploy
