Fix: Changed deployment-script

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "node deploy-script.js",
+    "deploy": "deploy-script.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
