--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
+    "devicons-react": "^1.3.0",
     "highlight.js": "^11.9.0",
     "marked": "^12.0.2",
     "react": "^18.2.0",
